--- a/cat.html
+++ b/cat.html
@@ -20,7 +20,7 @@
 		<h2>For the Little Goblin in All of Us!</h2>
 		<nav id="navigation_top">
         	<ul>
-            		<li><a class="current" href="index.html">Home</a></li>
+            		<li><a href="index.html">Home</a></li>
            		<li><a href="productlist.html">Product List</a></li>
             		<li><a href="temp.html">Personal</a></li>
             		<li><a href="temp.html">Planning</a></li>
